--- a/Notebooks/Crop_Recommendation_Model.ipynb
+++ b/Notebooks/Crop_Recommendation_Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "22b4fa43",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "942e54ce",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e321a445",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "1e3a7903",
    "metadata": {},
    "outputs": [],
@@ -49,8 +49,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3cc21267",
+   "execution_count": 6,
+   "id": "718e4a03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Scale the Data\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "sc = StandardScaler()\n",
+    "x_train2 = sc.fit_transform(X_train)\n",
+    "x_test2 = sc.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "aee5ad9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,13 +72,13 @@
     "from sklearn.tree import DecisionTreeClassifier  \n",
     "\n",
     "for name, model in [('Decision Tree Classifier', DecisionTreeClassifier(random_state=100))]: \n",
-    "    model.fit(X_train,y_train)\n",
-    "    predict = model.predict(X_test)"
+    "    model.fit(x_train2,y_train)\n",
+    "    predict = tree.predict(x_test2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "dcde5363",
    "metadata": {},
    "outputs": [
@@ -108,17 +122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "5b243558",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\proud\\anaconda3\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "y_pred = model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d5f02e09",
    "metadata": {},
    "outputs": [],
@@ -128,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "2d3a08ee",
    "metadata": {},
    "outputs": [
@@ -138,7 +161,7 @@
        "['./../savedModels/model.joblib']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +169,14 @@
    "source": [
     "dump(model, './../savedModels/model.joblib')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6082000b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
