--- a/Notebooks/Crop_Recommendation_Model.ipynb
+++ b/Notebooks/Crop_Recommendation_Model.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "# import libraries\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "718e4a03",
    "metadata": {},
    "outputs": [],
@@ -63,22 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "aee5ad9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Script for Decision Tree\n",
-    "from sklearn.tree import DecisionTreeClassifier  \n",
-    "\n",
-    "for name, model in [('Decision Tree Classifier', DecisionTreeClassifier(random_state=100))]: \n",
-    "    model.fit(x_train2,y_train)\n",
-    "    predict = tree.predict(x_test2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "dcde5363",
    "metadata": {},
    "outputs": [
@@ -87,42 +72,51 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Estimator: Decision Tree Classifier\n",
+      "Estimator:LogReg\n",
       "[[26  0  0  0  0  0  0]\n",
       " [ 0 20  0  0  0  0  0]\n",
       " [ 0  0 25  0  0  0  0]\n",
       " [ 0  0  0 20  0  0  0]\n",
       " [ 0  0  0  0 24  0  0]\n",
-      " [ 0  0  0  0  0 20  0]\n",
-      " [ 0  0  0  0  0  0 28]]\n",
+      " [ 0  0  3  0  0 17  0]\n",
+      " [ 0  0  0  0  4  0 24]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "   Soyabeans       1.00      1.00      1.00        26\n",
       "       apple       1.00      1.00      1.00        20\n",
-      "       beans       1.00      1.00      1.00        25\n",
+      "       beans       0.89      1.00      0.94        25\n",
       "      grapes       1.00      1.00      1.00        20\n",
-      "       maize       1.00      1.00      1.00        24\n",
-      "        peas       1.00      1.00      1.00        20\n",
-      "        rice       1.00      1.00      1.00        28\n",
+      "       maize       0.86      1.00      0.92        24\n",
+      "        peas       1.00      0.85      0.92        20\n",
+      "        rice       1.00      0.86      0.92        28\n",
       "\n",
-      "    accuracy                           1.00       163\n",
-      "   macro avg       1.00      1.00      1.00       163\n",
-      "weighted avg       1.00      1.00      1.00       163\n",
+      "    accuracy                           0.96       163\n",
+      "   macro avg       0.96      0.96      0.96       163\n",
+      "weighted avg       0.96      0.96      0.96       163\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Evaluation Report and Matrix\n",
-    "from sklearn.metrics import classification_report, confusion_matrix  \n",
-    "print('\\nEstimator: {}'.format(name)) \n",
-    "print(confusion_matrix(y_test,predict))  \n",
-    "print(classification_report(y_test,predict)) "
+    "# Model Import\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Logistical Regression Model\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "for name, model in [('LogReg', LogisticRegression(solver = 'liblinear',\n",
+    "                                                  class_weight = 'balanced',\n",
+    "                                                  random_state = 100))]:\n",
+    "    model.fit(x_train2, y_train)\n",
+    "    predict = model.predict(x_test2)\n",
+    "    print('\\nEstimator:{}'.format(name))\n",
+    "    print(confusion_matrix(y_test, predict))\n",
+    "    print(classification_report(y_test, predict))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "5b243558",
    "metadata": {},
    "outputs": [
@@ -130,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\proud\\anaconda3\\lib\\site-packages\\sklearn\\base.py:443: UserWarning: X has feature names, but DecisionTreeClassifier was fitted without feature names\n",
+      "C:\\Users\\proud\\anaconda3\\lib\\site-packages\\sklearn\\base.py:432: UserWarning: X has feature names, but LogisticRegression was fitted without feature names\n",
       "  warnings.warn(\n"
      ]
     }
@@ -141,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "d5f02e09",
    "metadata": {},
    "outputs": [],
@@ -151,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "2d3a08ee",
    "metadata": {},
    "outputs": [
@@ -161,7 +155,7 @@
        "['./../savedModels/model.joblib']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,14 +163,6 @@
    "source": [
     "dump(model, './../savedModels/model.joblib')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6082000b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
